--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_script:
   - wget https://github.com/mozilla/geckodriver/releases/download/v0.26.0/geckodriver-v0.26.0-linux64.tar.gz
   - tar -xvzf geckodriver-v0.26.0-linux64.tar.gz
   - sudo mv geckodriver /usr/local/bin
+  - pip3 install selenium
 
 script:
   make test
